--- a/site/findex.html
+++ b/site/findex.html
@@ -35,10 +35,6 @@
             font-family: sans-serif;
         }
 
-        caption {
-          font-weight: bold;
-        }
-
         button {
             height: 40px;
             width: 200px;
@@ -50,7 +46,8 @@
         }
 
         img {
-            width: 133px;
+          width: 133px;
+          margin-right: 50px;
         }
 
         form {
@@ -65,7 +62,10 @@
             background-color: #fff;
             border: 1px solid #d9d9d9;
             border-radius: 5px;
-            margin-top: 10px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .textInput {
@@ -75,7 +75,8 @@
         }
 
         h3 {
-            margin-bottom: 20px;
+          width: 100%;
+          margin-top: 30px;
         }
 
         footer {
@@ -88,7 +89,7 @@
         }
 
         .header {
-            min-width: 100%;
+            max-width: 100%;
             height: 60px;
             border-bottom: 1px solid #d9d9d9;
             display: flex;
@@ -100,18 +101,21 @@
         }
 
         .demo {
-            margin-left: 170px;
-            margin-right: 170px;
+            margin-left: 10%;
+            margin-right: 10%;
             border-left: 1px solid #d9d9d9;
             border-right: 1px solid #d9d9d9;
             padding: 30px;
             background-color: #fafafa;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .users {
             display: flex;
             justify-content: space-between;
-            width: 100%;
+            width: 60%;
             margin: 40px;
         }
 
@@ -139,11 +143,7 @@
         }
 
         .columns {
-            display: flex;
-            justify-content: space-around;
             background: #d9d9d9;
-            padding: 10px;
-            margin: 20px;
             border-bottom: 1px solid rgb(201, 200, 200);
             border-radius: 2px;
             flex: 1;
@@ -153,9 +153,10 @@
         .item {
             display: flex;
             justify-content: space-around;
-            padding: 10px;
-            margin: 20px;
+            padding: 10px 0px;
+            margin: 10px;
             font-weight: 200;
+            width: 95%;
         }
 
         .cell {
@@ -166,8 +167,8 @@
             border-bottom: 1px solid #d9d9d9;
         }
 
-        .title {
-            margin-right: 50px;
+        .tab {
+            width: 100%;
         }
     </style>
 </head>
@@ -176,55 +177,62 @@
     <script src="./main.js"></script>
     <div class="header">
         <img src="./assets/cosmian-logo-color-234x50.svg" onclick="location.href='index.html';">
-        <h2  class="title">Findex</h2>
+        <h2>Findex</h2>
     </div>
     <div class="demo">
         <h3>Findex</h3>
-        <p>Cosmian has developed a new fast Symmetric Searchable Scheme (SSE) codenamed Findex.</p>
-        <p>The scheme is not publicly available while being patented but can be disclosed under NDA.</p>
-        <p>Likewise, and for the same reason, the Rust implementation is not yet publicly available but can be obtained under NDA.</p>
+        <div class="tab">
+            <p>Cosmian has developed a new fast Symmetric Searchable Scheme (SSE) codenamed Findex.</p>
+            <p>The scheme is not publicly available while being patented but can be disclosed under NDA.</p>
+            <p>Likewise, and for the same reason, the Rust implementation is not yet publicly available but can be obtained under NDA.</p>
+        </div>
         <br/>
         <button onclick="load_data(); return false">Toggle tables</button>
         <h3>Users database</h3>
-        <div  class="block">
+        <div class="block">
             <img class="picto" src="./assets/Cleartext database.png">
-            <div id="clear_db"></div>
+            <div id="clear_db" class="tab"></div>
         </div>
         <h3>Encrypted directory</h3>
         <div  class="block">
             <img class="picto" src="./assets/Encrypted database.png">
-            <div id="enc_db"></div>
+            <div id="enc_db" class="tab"></div>
         </div>
         <h3>Search elements</h3>
-        <form class="block" onSubmit="search(document.getElementById('query').value, document.querySelector('input[name=\'user\']:checked').value); return false">
-            <div class="users">
-            <div class="user">
-                <img class="picto" src="./assets/Alice.png">
-                <input type="radio" id="alice" name="user" value="alice" class="radio">
-            </div>
-            <div class="user">
-                <img class="picto" src="./assets/Bob.png">
-                <input type="radio" id="bob" name="user" value="bob" class="radio">
-            </div>
-            <div class="user">
-                <img class="picto" src="./assets/Mallory.png">
-                <input type="radio" id="mallory" name="user" value="mallory" class="radio" checked>
-            </div>
-            </div>
-            <div class="search">
-            <input type="text" id="query" name="query" class="textInput" placeholder="Words to query... ex: Félix Paul">
-            <br/>
-            <button type="submit" value="Submit">Search</button>
+            <form class="block" onSubmit="search(document.getElementById('query').value, document.querySelector('input[name=\'user\']:checked').value); return false">
+                <div class="users">
+                <div class="user">
+                    <img class="picto" src="./assets/Alice.png">
+                    <input type="radio" id="alice" name="user" value="alice" class="radio">
+                </div>
+                <div class="user">
+                    <img class="picto" src="./assets/Bob.png">
+                    <input type="radio" id="bob" name="user" value="bob" class="radio">
+                </div>
+                <div class="user">
+                    <img class="picto" src="./assets/Mallory.png">
+                    <input type="radio" id="mallory" name="user" value="mallory" class="radio" checked>
+                </div>
+                </div>
+                <div class="search">
+                <input type="text" id="query" name="query" class="textInput" placeholder="Words to query... ex: Félix Paul">
+                <br/>
+                <button type="submit" value="Submit">Search</button>
+                </div>
+            </form>
+            <div id="result" style="visibility: hidden; width: 100%;">
+                <h3>Result</h3>
+                <div class="block" id="content"></div>
             </div>
         </form>
-        <div id="result" style="visibility: hidden;">
+        <div id="result" class="tab" style="visibility: hidden;">
             <h3>Result</h3>
-            <div class="block" id="content"></div>
+            <div class="block tab" id="content"></div>
         </div>
     </div>
 
     <footer>
-        <img class="title" src="./assets/cosmian-logo-white-234x50.svg">
+        <img src="./assets/cosmian-logo-white-234x50.svg">
     </footer>
 </body>
 
