--- a/site/index.html
+++ b/site/index.html
@@ -34,10 +34,6 @@
             margin: 0;
         }
 
-        caption {
-            font-weight: bold;
-        }
-
         button {
             height: 40px;
             width: 200px;
@@ -53,7 +49,7 @@
         }
 
         .header {
-            min-width: 100%;
+            max-width: 100%;
             height: 60px;
             border-bottom: 1px solid #d9d9d9;
             display: flex;
