Add ABE key generation: master key generation and user decryption key generation

--- a/site/abe.html
+++ b/site/abe.html
@@ -39,12 +39,12 @@
     <br>
 
     <fieldset id="abe_group">
-        <input type="radio" value="gpsw" name="abe_group" checked onclick="
+        <input type="radio" value="gpsw" name="abe_group" onclick="
             initPage(true)
         ">
         <label for="gpsw">ABE-GPSW</label>
 
-        <input type="radio" value="covercrypt" name="abe_group" onclick="
+        <input type="radio" value="covercrypt" name="abe_group" checked onclick="
             initPage(false)
         ">
         <label for="covercrypt">ABE-CoverCrypt</label>
