re-importing from old repo

--- a/site/index.html
+++ b/site/index.html
@@ -6,21 +6,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet"
-    />
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/brands.min.css"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/brands.min.css"
         integrity="sha512-lCU0XyQA8yobR7ychVxEOU5rcxs0+aYh/9gNDLaybsgW9hdrtqczjfKVNIS5doY0Y5627/+3UVuoGv7p8QsUFw=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
-    <link
-        rel="icon"
-        href="https://raw.githubusercontent.com/Cosmian/Files/main/cosmian-c-orange-42x50.svg"
-        type="image/png"
-        sizes="192x192"
-    />
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="https://raw.githubusercontent.com/Cosmian/Files/main/cosmian-c-orange-42x50.svg"
+        type="image/png" sizes="192x192" />
     <meta http-equiv="x-dns-prefetch-control" content="off" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -81,7 +72,8 @@
     </div>
     <div class="menu">
         <button onclick="location.href='findex.html';">FINDEX DEMO</button>
-        <button onclick="location.href='abe.html';">ABE DEMO</button>  
+        <button onclick="location.href='abe.html';">ABE DEMO</button>
+        <button onclick="location.href='local_files_encryption.html';">LOCAL FILES ENCRYPTION DEMO</button>
     </div>
 </body>
 
