--- a/site/local_files_encryption.html
+++ b/site/local_files_encryption.html
@@ -5,28 +5,94 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta http-equiv="x-dns-prefetch-control" content="off" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <base href="/" />
     <title>Cosmian JS Lib</title>
     <style>
         body {
             display: flex;
             flex-direction: column;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        .block {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 20px;
+        }
+
+        .drop_zone {
+            border: 5px solid;
+            width: 300px;
+            height: 200px;
+        }
+
+        .drop_zone p {
+            padding-left: 10px;
+            padding-right: 5px;
         }
 
         #encryption_drop_zone {
-            border: 5px solid green;
-            width: 200px;
-            height: 100px;
+            border-color: green;
         }
 
         #decryption_drop_zone {
-            border: 5px solid blue;
-            width: 200px;
-            height: 100px;
+            border-color: orange;
         }
 
-        #sep {
-            height: 20px;
+        .drop_downs {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            padding-left: 5px;
+        }
+
+        .drop_downs label {
+            padding-top: 10px;
+        }
+
+        .modal {
+            border: 1px solid black;
+            background-color: white;
+            width: 300px;
+            height: 200px;
+            position: absolute;
+            left: 50%;
+            margin-left: -(50% of width);
+            top: 50%;
+            margin-left: -150px;
+            margin-top: -100px;
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
+
+        .modal_title {
+            background-color: lightgray;
+            color: darkgreen;
+            text-align: center;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        .modal_content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            flex-grow: 1;
+        }
+
+        .modal_button {
+            display: flex;
+            vertical-align: middle;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
     </style>
     <script>
@@ -40,7 +106,7 @@
         function recover_files(ev) {
 
             // Prevent default behavior (Prevent file from being opened)
-            ev.preventDefault();
+            ev.preventDefault()
 
             var files = []
 
@@ -49,29 +115,72 @@
                 for (var i = 0; i < ev.dataTransfer.items.length; i++) {
                     // If dropped items aren't files, reject them
                     if (ev.dataTransfer.items[i].kind === 'file') {
-                        files.push(ev.dataTransfer.items[i].getAsFile());
+                        files.push(ev.dataTransfer.items[i].getAsFile())
                     }
                 }
             } else {
                 // Use DataTransfer interface to access the file(s)
                 for (var i = 0; i < ev.dataTransfer.files.length; i++) {
-                    files.push(ev.dataTransfer.files[i]);
+                    files.push(ev.dataTransfer.files[i])
                 }
             }
-            return files;
+            return files
         }
     </script>
 </head>
 
 <body>
+    <div class="block">
+        <div id="encryption_drop_zone" class="drop_zone" ondrop="encrypt_files(
+                recover_files(event), 
+                document.getElementById('security-level').value, 
+                document.getElementById('department').value
+            );" ondragover="on_drag_over(event);">
+            <p>Drag one or more files to this Drop Zone to <b>encrypt</b> them ...</p>
+        </div>
+        <div class="drop_downs">
+            <label>Department</label>
+            <select id="department" title="Department">
+                <option value="MKG" selected>Marketing</option>
+                <option value="FIN">Finance</option>
+                <option value="HR">Human Res.</option>
+                <option value="R&D">R&D</option>
+            </select>
+            <label>Security Level</label>
+            <select id="security-level" title="Security Level">
+                <option value="Protected">Minimum</option>
+                <option value="Low Secret" selected>Low</option>
+                <option value="Medium Secret">Medium</option>
+                <option value="High Secret">High</option>
+                <option value="Top Secret">Maximum</option>
+            </select>
+        </div>
+    </div>
+    <div class="block">
+        <div id="sep"></div>
+        <div id="decryption_drop_zone" class="drop_zone" ondrop="decrypt_files(
+            recover_files(event), 
+            document.getElementById('user_key').value
+            ).then(() => alert('Done'), (e)=>alert(e));" ondragover="on_drag_over(event);">
+            <p>Drag one or more files to this Drop Zone to <b>decrypt</b> them ...</p>
+        </div>
+        <div class="drop_downs">
+            <label>User Key</label>
+            <select id="user_key" title="User Key">
+                <option value="topSecretMkgFinUser">(Department::Marketing
+                    || Department::Finance) && Security Level::Maximum</option>
+                <option value="mediumSecretMarketingUser" selected>Department::Marketing && Security Level::Medium
+                </option>
+            </select>
+        </div>
+    </div>
+    <div id="modal_dialog" class="modal">
+        <div class="modal_title">BLAH</div>
+        <div class="modal_content">This the content</div>
+        <div class="modal_button"><button
+                onclick="document.getElementById('modal_dialog').style.display='none'">OK</button></div>
+    </div>
     <script src="./main.js"></script>
-    <div id="encryption_drop_zone" ondrop="encrypt_files(recover_files(event));" ondragover="on_drag_over(event);">
-        <p>Drag one or more files to this Drop Zone to <b>encrypt</b> them ...</p>
-    </div>
-    <div id="sep"></div>
-    <div id="decryption_drop_zone" ondrop="decrypt_files(recover_files(event));" ondragover="on_drag_over(event);">
-        <p>Drag one or more files to this Drop Zone to <b>decrypt</b> them ...</p>
-    </div>
     <noscript class="app-noscript">
         Requires Javascript
     </noscript>
