--- a/site/local_files_encryption.html
+++ b/site/local_files_encryption.html
@@ -56,20 +56,20 @@
         .modal {
             border: 1px solid black;
             background-color: white;
-            width: 300px;
+            width: 400px;
             height: 200px;
             position: absolute;
             left: 50%;
             margin-left: -(50% of width);
             top: 50%;
-            margin-left: -150px;
+            margin-left: -200px;
             margin-top: -100px;
-            display: flex;
             flex-direction: column;
             align-items: stretch;
+            display: none;
         }
 
-        .modal_title {
+        #modal_title {
             background-color: lightgray;
             color: darkgreen;
             text-align: center;
@@ -77,15 +77,16 @@
             padding-bottom: 10px;
         }
 
-        .modal_content {
+        #modal_content {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             flex-grow: 1;
+            padding: 5px;
         }
 
-        .modal_button {
+        #modal_button {
             display: flex;
             vertical-align: middle;
             padding-top: 10px;
@@ -126,6 +127,16 @@
             }
             return files
         }
+
+        function dialog(error, msg) {
+            var dialog_title = document.getElementById('modal_title')
+            dialog_title.innerHTML = error ? "ERROR" : "SUCCESS"
+            dialog_title.style.color = error ? "darkred" : "darkgreen"
+            var dialog_content = document.getElementById('modal_content')
+            dialog_content.innerHTML = msg
+            var dialog = document.getElementById('modal_dialog')
+            dialog.style.display = 'flex'
+        }
     </script>
 </head>
 
@@ -135,7 +146,8 @@
                 recover_files(event), 
                 document.getElementById('security-level').value, 
                 document.getElementById('department').value
-            );" ondragover="on_drag_over(event);">
+            ).then((filenames) => dialog(false, 'Encrypted:<br/>'+filenames.join('<br/>')), (e)=>dialog(true, e));"
+            ondragover="on_drag_over(event);">
             <p>Drag one or more files to this Drop Zone to <b>encrypt</b> them ...</p>
         </div>
         <div class="drop_downs">
@@ -161,7 +173,8 @@
         <div id="decryption_drop_zone" class="drop_zone" ondrop="decrypt_files(
             recover_files(event), 
             document.getElementById('user_key').value
-            ).then(() => alert('Done'), (e)=>alert(e));" ondragover="on_drag_over(event);">
+            ).then((filenames) => dialog(false, 'Decrypted:<br/>'+filenames.join('<br/>')), (e)=>dialog(true, e));"
+            ondragover="on_drag_over(event);">
             <p>Drag one or more files to this Drop Zone to <b>decrypt</b> them ...</p>
         </div>
         <div class="drop_downs">
@@ -175,9 +188,9 @@
         </div>
     </div>
     <div id="modal_dialog" class="modal">
-        <div class="modal_title">BLAH</div>
-        <div class="modal_content">This the content</div>
-        <div class="modal_button"><button
+        <div id="modal_title">Title</div>
+        <div id="modal_content">This the content</div>
+        <div id="modal_button"><button
                 onclick="document.getElementById('modal_dialog').style.display='none'">OK</button></div>
     </div>
     <script src="./main.js"></script>
