Rename findex to findex & covercrypt

--- a/site/findex.html
+++ b/site/findex.html
@@ -177,10 +177,10 @@
     <script src="./main.js"></script>
     <div class="header">
         <img src="./assets/cosmian-logo-color-234x50.svg" onclick="location.href='index.html';">
-        <h2>Findex</h2>
+        <h2>Findex & CoverCrypt</h2>
     </div>
     <div class="demo">
-        <h3>Findex</h3>
+        <h3>Findex & CoverCrypt</h3>
         <div class="tab">
             <p>Cosmian has developed a new fast Symmetric Searchable Scheme (SSE) codenamed Findex.</p>
             <p>The scheme is not publicly available while being patented but can be disclosed under NDA.</p>
