--- a/site/index.html
+++ b/site/index.html
@@ -80,8 +80,8 @@
         <h2>Cloudproof Encryption</h2>
     </div>
     <div class="menu">
-        <button onclick="location.href='findex.html';">FINDEX DEMO</button>
-        <button onclick="location.href='abe.html';">ABE DEMO</button>  
+        <button onclick="location.href='findex.html';">FINDEX & COVERCRYPT DEMO</button>
+        <button onclick="location.href='abe.html';">ABE DEMO</button>
     </div>
 </body>
 
