Replace mallory with charlie

--- a/site/findex.html
+++ b/site/findex.html
@@ -210,8 +210,8 @@
                     <input type="radio" id="bob" name="user" value="bob" class="radio">
                 </div>
                 <div class="user">
-                    <img class="picto" src="./assets/Mallory.png">
-                    <input type="radio" id="mallory" name="user" value="mallory" class="radio" checked>
+                    <img class="picto" src="./assets/Charlie.png">
+                    <input type="radio" id="charlie" name="user" value="charlie" class="radio" checked>
                 </div>
                 </div>
                 <div class="search">
