Implement basic OR AND requests

--- a/site/findex.html
+++ b/site/findex.html
@@ -170,6 +170,62 @@
         .tab {
             width: 100%;
         }
+         /* The switch - the box around the slider */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 24px;
+            margin: 10px;
+        }
+
+        /* Hide default HTML checkbox */
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* The slider */
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 24px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: #e3431a;
+        }
+
+        input:focus + .slider {
+            box-shadow: 0 0 1px  #e3431a;
+        }
+
+        input:checked + .slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
     </style>
 </head>
 
@@ -199,7 +255,7 @@
             <div id="enc_db" class="tab"></div>
         </div>
         <h3>Search elements</h3>
-            <form class="block" onSubmit="search(document.getElementById('query').value, document.querySelector('input[name=\'user\']:checked').value); return false">
+            <form class="block" onSubmit="search(document.getElementById('query').value, document.querySelector('input[name=\'user\']:checked').value, document.getElementById('switch').checked); return false">
                 <div class="users">
                 <div class="user">
                     <img class="picto" src="./assets/Alice.png">
@@ -215,9 +271,17 @@
                 </div>
                 </div>
                 <div class="search">
-                <input type="text" id="query" name="query" class="textInput" placeholder="Words to query... ex: Félix Paul">
-                <br/>
-                <button type="submit" value="Submit">Search</button>
+                    <div style="display: flex; align-items: center; margin: 20px;">
+                        <h5>OR</h5>
+                        <label class="switch">
+                            <input type="checkbox" id="switch">
+                            <span class="slider"></span>
+                        </label>
+                        <h5>AND</h5>
+                    </div>
+                    <input type="text" id="query" name="query" class="textInput" placeholder="Words to query... ex: Félix Paul">
+                    <br/>
+                    <button type="submit" value="Submit">Search</button>
                 </div>
             </form>
             <div id="result" style="visibility: hidden; width: 100%;">
