--- a/site/findex.html
+++ b/site/findex.html
@@ -233,17 +233,18 @@
     <script src="./main.js"></script>
     <div class="header">
         <img src="./assets/cosmian-logo-color-234x50.svg" onclick="location.href='index.html';">
-        <h2>Findex & CoverCrypt</h2>
+        <h2>Findex & Covercrypt</h2>
     </div>
     <div class="demo">
-        <h3>Findex & CoverCrypt</h3>
+        <h3>Findex & Covercrypt</h3>
         <div class="tab">
-            <p>Cosmian has developed a new fast Symmetric Searchable Scheme (SSE) codenamed Findex.</p>
+            <p>Cosmian has developed a new fast Symmetric Searchable Scheme (SSE) codenamed <b>Findex</b>.</p>
             <p>The scheme is not publicly available while being patented but can be disclosed under NDA.</p>
             <p>Likewise, and for the same reason, the Rust implementation is not yet publicly available but can be obtained under NDA.</p>
+            <p>In this demo, it is combined with an attribute-based encryption scheme : <b>Covercrypt</b>.</p>
         </div>
         <br/>
-        <button onclick="load_data(); return false">Toggle tables</button>
+        <button onclick="loadData(); return false">Toggle tables</button>
         <h3>Users database</h3>
         <div class="block">
             <img class="picto" src="./assets/Cleartext database.png">
