Basic implem JS upsert

--- a/site/index.html
+++ b/site/index.html
@@ -82,6 +82,7 @@
     <div class="menu">
         <button onclick="location.href='findex.html';">CLOUDPROOF ENCRYPTION</button>
         <!-- <button onclick="location.href='abe.html';">ABE DEMO</button> -->
+        <button onclick="location.href='new_findex.html';">FINDEX NEW</button>
     </div>
 </body>
 
