Include sql file to deploy

--- a/site/cloudproof.html
+++ b/site/cloudproof.html
@@ -79,15 +79,6 @@
             margin-top: 30px;
         }
 
-        footer {
-            color: #fff;
-            background-color: #7C7C7C;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-        }
-
         .header {
             max-width: 100%;
             height: 60px;
@@ -97,7 +88,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 0 20px;
-            color: #7C7C7C;
+            color: #1B2631;
         }
 
         .demo {
@@ -296,10 +287,6 @@
             <div class="block tab" id="content"></div>
         </div>
     </div>
-
-    <footer>
-        <img src="./assets/cosmian-logo-white-234x50.svg">
-    </footer>
 </body>
 
 </html>
