--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,7 @@
             justify-content: space-between;
             padding: 0 20px;
             font-family: Montserrat;
-            color: #7C7C7C;
+            color: #1B2631;
         }
 
         h2 {
